[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Plante/Image/arbuste 2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Plante/Plante.gd" type="Script" id=2]
[ext_resource path="res://Assets/Plante/Image/arbuste 3 s.png" type="Texture" id=3]
[ext_resource path="res://Assets/Plante/Image/arbuste 1 s.png" type="Texture" id=4]
[ext_resource path="res://Assets/Plante/Image/arbuste 3.png" type="Texture" id=5]
[ext_resource path="res://Assets/Plante/Image/arbuste 1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Plante/Image/arbuste 2 s.png" type="Texture" id=7]
[ext_resource path="res://Assets/Plante/herbeSeche.png" type="Texture" id=8]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
render_mode blend_mix;

// Wind settings.
uniform float speed = 1.0;
uniform float minStrength : hint_range(0.0, 1.0);
uniform float maxStrength : hint_range(0.0, 1.0);
uniform float strengthScale = 100.0;
uniform float interval = 3.5;
uniform float detail = 1.0;
uniform float distortion : hint_range(0.0, 1.0);
uniform float heightOffset = 0.0;

float getWind(vec2 vertex, vec2 uv, float timer){
	vec2 pos = mix(vec2(1.0), vertex, distortion).xy;
	float time = timer * speed + pos.x * pos.y;
	float diff = pow(maxStrength - minStrength, 2.0);
	float strength = clamp(minStrength + diff + sin(time / interval) * diff, minStrength, maxStrength) * strengthScale;
	float wind = (sin(time) + cos(time * detail)) * strength * max(0.0, (1.0-uv.y) - heightOffset);
	
	return wind;
	}

void vertex() {
	VERTEX.x += getWind(VERTEX.xy, UV, TIME);
}
"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/speed = 2.0
shader_param/minStrength = 0.0
shader_param/maxStrength = 0.3
shader_param/strengthScale = 50.0
shader_param/interval = 3.5
shader_param/detail = 1.0
shader_param/distortion = 0.0
shader_param/heightOffset = 0.0

[sub_resource type="SpriteFrames" id=3]
resource_local_to_scene = true
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "lvl1",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "fanelvl1",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "lvl3",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "fanelvl3",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "lvl2",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "fanelvl2",
"speed": 5.0
} ]

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.45098, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.45098, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Disparition"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Arbuste" type="AnimatedSprite"]
material = SubResource( 2 )
frames = SubResource( 3 )
animation = "lvl1"
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( -23.7254, -10.5659 )
scale = Vector2( 3.06715, 1 )
polygon = PoolVector2Array( -18.3475, -21.4341, -18.3475, 66.5659, 36.2897, 63.2224, 36.4265, -21.4341 )

[node name="Goutte" type="Sprite" parent="."]
self_modulate = Color( 0.45098, 1, 1, 1 )
show_behind_parent = true
position = Vector2( 0, 16 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Goutte"]
anims/Modulate_humide = SubResource( 4 )
anims/Modulate_sec = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Apparition"
anims/Apparition = SubResource( 6 )
anims/Disparition = SubResource( 7 )
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
